# communication-tool

./: compose.yaml
.github/workflows/: ci.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: main.py
backend/app/db/: database.py  init_db.py
backend/app/db/models/: __init__.py  user.py
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
